--- a/index.html
+++ b/index.html
@@ -351,17 +351,17 @@
 
      <script>
           function goToEnglishPage() {
-        window.location.href = "/Users/anvithareddybarry/Desktop/GNITS/HomePageEng.html";
+        window.location.href = "HomePageEng.html";
     }
 
     function goToTeluguPage() {
-        window.location.href = "/Users/anvithareddybarry/Desktop/GNITS/HomePageTEl.html";
+        window.location.href = "HomePageTel.html";
     }
 
     // Dynamically insert an image
     const dynamicImageContainer = document.getElementById('dynamic-image-container');
     const dynamicImage = document.createElement('img');
-    dynamicImage.src = '/Users/anvithareddybarry/Desktop/GNITS/WhatsApp Image 2024-02-16 at 2.47.09 PM (1).jpeg'
+    dynamicImage.src = 'WhatsApp Image 2024-02-16 at 2.47.09 PM (1).jpeg'
     dynamicImageContainer.appendChild(dynamicImage);
     </script>
 </body>
